--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "scripts": {
     "copyfiles": "mkdir dist && cp node_modules/todomvc-app-css/index.css public/todomvc-app-css.css && cp node_modules/todomvc-common/base.css public/todomvc-common.css && cp node_modules/todomvc-common/base.js public/todomvc-common.js",
     "build": "rollup -c",
-    "dev": "rollup -cw",
-    "deploy": "surge public svelte-todomvc.surge.sh",
+    "dev": "rollup -c -w",
     "predeploy": "npm run build",
-    "start": "http-server public & npm run dev & open http://localhost:8080"
+    "start": "sirv public --no-clear",
+    "update_automerge": "cp node_modules/automerge-wasm-pack/web/index_bg.wasm public/build",
+    "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "files": [
     "index.html",
@@ -30,21 +31,28 @@
   },
   "homepage": "https://github.com/sveltejs/svelte-todomvc",
   "dependencies": {
-    "automerge-wasm-pack": "^0.0.18",
-    "http-server": "^14.1.0",
+    "automerge-wasm-pack": "^0.0.19",
     "idb-keyval": "^6.1.0",
-    "todomvc-app-css": "2.2.0",
+    "sirv-cli": "^2.0.0",
+    "todomvc-app-css": "2.4.2",
     "todomvc-common": "^1.0.5"
   },
   "devDependencies": {
-    "@ampproject/rollup-plugin-closure-compiler": "^0.8.5",
+    "@rollup/plugin-commonjs": "^21.0.2",
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-typescript": "^8.0.0",
+    "@tsconfig/svelte": "^3.0.0",
     "prettier": "2.5.1",
-    "rollup": "^1.7.3",
+    "rollup": "^2.3.4",
     "rollup-plugin-buble": "^0.19.2",
-    "rollup-plugin-node-resolve": "^4.0.1",
-    "rollup-plugin-svelte": "^5.0.3",
-    "rollup-plugin-terser": "^4.0.4",
-    "surge": "^0.20.1",
-    "svelte": "^3.0.0-beta.20"
+    "rollup-plugin-css-only": "^3.1.0",
+    "rollup-plugin-livereload": "^2.0.5",
+    "rollup-plugin-svelte": "^7.0.0",
+    "rollup-plugin-terser": "^7.0.0",
+    "svelte": "^3.0.0",
+    "svelte-check": "^2.0.0",
+    "svelte-preprocess": "^4.0.0",
+    "tslib": "^2.0.0",
+    "typescript": "^4.0.0"
   }
 }
