--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "homepage": "https://github.com/sveltejs/svelte-todomvc",
   "dependencies": {
+    "@types/wicg-file-system-access": "^2020.9.5",
     "automerge-wasm-pack": "^0.0.19",
     "idb-keyval": "^6.1.0",
     "sirv-cli": "^2.0.0",
